# serde_dynamodb

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  LICENSE  Makefile.toml  README.md  appveyor.yml  index.html  release.toml  search-index.js  settings.html  source-files.js
.github/workflows/: check_streams.yml  ci.yml
example/: Cargo.toml
example/src/: main.rs
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Error.js
implementors/serde/ser/: trait.Error.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
serde_dynamodb/: Cargo.toml  README.md  all.html  fn.from_hashmap.html  fn.to_hashmap.html  index.html  sidebar-items.js  trait.ToQueryInput.html  update_streams.sh
serde_dynamodb/dynamodb/de/: fn.from_hashmap.html
serde_dynamodb/dynamodb/ser/: fn.to_hashmap.html
serde_dynamodb/dynamodbstreams/de/: fn.from_hashmap.html
serde_dynamodb/dynamodbstreams/ser/: fn.to_hashmap.html
serde_dynamodb/error/: index.html  sidebar-items.js  struct.Error.html  type.Result.html
serde_dynamodb/src/: de.rs  error.rs  lib.rs  ser.rs
serde_dynamodb/src/common/: mod.rs
serde_dynamodb/src/dynamodb/: de.rs  ser.rs
serde_dynamodb/src/dynamodbstreams/: de.rs  ser.rs
serde_dynamodb/streams/: fn.from_hashmap.html  fn.to_hashmap.html  index.html  sidebar-items.js
serde_dynamodb/tests/: dynamodb.rs  dynamodbstreams.rs  test.rs
serde_dynamodb_derive/: Cargo.toml
serde_dynamodb_derive/src/: lib.rs
src/: de.rs  error.rs  lib.rs  ser.rs
src/common/: mod.rs
src/dynamodb/: de.rs  ser.rs
src/dynamodbstreams/: de.rs  mod.rs  ser.rs
src/serde_dynamodb/: error.rs.html  lib.rs.html
src/serde_dynamodb/common/: mod.rs.html
src/serde_dynamodb/dynamodb/: de.rs.html  mod.rs.html  ser.rs.html
src/serde_dynamodb/dynamodbstreams/: de.rs.html  mod.rs.html  ser.rs.html
tests/: dynamodb.rs  dynamodbstreams.rs
travis/: build.sh
