[package]
name = "serde_dynamodb"
version = "0.9.1-dev"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "de/serialize struct to HashMap<String, AttributeValue> with Serde to use with Rusoto DynamoDB"
repository = "https://github.com/mockersf/serde_dynamodb"
homepage = "https://github.com/mockersf/serde_dynamodb"
documentation = "https://docs.rs/serde_dynamodb"
keywords = ["serde", "dynamodb", "rusoto"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0"
rusoto_dynamodb = { version = "0.47.0", default-features = false, optional = true }
rusoto_dynamodbstreams = { version = "0.47.0", default-features = false, optional = true }
bytes = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rusoto_core = { version = "0.48.0", default-features = false }
rusoto_dynamodb = { version = "0.47.0", default-features = false }

[features]
default = ["rusoto_dynamodb", "rusoto_dynamodb/rustls"]

rustls = ["rusoto_dynamodb", "rusoto_dynamodb/rustls"]
native-tls = ["rusoto_dynamodb", "rusoto_dynamodb/native-tls"]

streams = ["rusoto_dynamodbstreams", "rusoto_dynamodbstreams/rustls"]
streams-rustls = ["rusoto_dynamodbstreams", "rusoto_dynamodbstreams/rustls"]
streams-native-tls = ["rusoto_dynamodbstreams", "rusoto_dynamodbstreams/native-tls"]
