[package]
name = "example"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_dynamodb = { path = "../serde_dynamodb" }
serde_dynamodb_derive = { path = "../serde_dynamodb_derive" }

rusoto_core = "0.41"
rusoto_dynamodb = "0.41"

uuid = { version = "0.7", features = ["serde", "v4"] }
