[package]
name = "example"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
serde_derive = "*"
serde_dynamodb = { path = "../serde_dynamodb" }
serde_dynamodb_derive = { path = "../serde_dynamodb_derive" }
tokio = { version = "0.2", features = ["full"] }

rusoto_core = "0.43.0-beta.1"
rusoto_dynamodb = "0.43.0-beta.1"

uuid = { version = "0.8", features = ["serde", "v4"] }
