[package]
name = "example"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
serde_derive = "*"
serde_dynamodb = { path = "../serde_dynamodb" }
serde_dynamodb_derive = { path = "../serde_dynamodb_derive" }

rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"

uuid = { version = "0.8", features = ["serde", "v4"] }

futures = "0.3"
