[package]
name = "serde_dynamodb"
version = "0.4.1"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "de/serialize struct to HashMap<String, AttributeValue> with Serde to use with Rusoto DynamoDB"
repository = "https://github.com/mockersf/serde_dynamodb"
homepage = "https://github.com/mockersf/serde_dynamodb"
documentation = "https://docs.rs/serde_dynamodb"
keywords = ["serde", "dynamodb", "rusoto"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "mockersf/serde_dynamodb" }

[dependencies]
serde = "1.0"
rusoto_dynamodb = { version = "0.43.0-beta.1", default-features = false, optional = true }
rusoto_dynamodbstreams = { version = "0.43.0-beta.1", optional = true }
bytes = "0.5"

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rusoto_core = "0.42"
rusoto_dynamodb = "0.42"

[features]
default = ["rusoto_dynamodb", "rusoto_dynamodb/default"]
rustls = ["rusoto_dynamodb", "rusoto_dynamodb/rustls"]
