[package]
name = "serde_dynamodb"
version = "0.6.0"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "de/serialize struct to HashMap<String, AttributeValue> with Serde to use with Rusoto DynamoDB"
repository = "https://github.com/mockersf/serde_dynamodb"
homepage = "https://github.com/mockersf/serde_dynamodb"
documentation = "https://docs.rs/serde_dynamodb"
keywords = ["serde", "dynamodb", "rusoto"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "mockersf/serde_dynamodb" }

[dependencies]
serde = "1.0"
rusoto_dynamodb = { version = "0.45.0", default-features = false, optional = true }
rusoto_dynamodbstreams = { version = "0.45.0", optional = true }
bytes = "0.6"

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"

[features]
default = ["rusoto_dynamodb", "rusoto_dynamodb/default"]
rustls = ["rusoto_dynamodb", "rusoto_dynamodb/rustls"]
